app/assets/stylesheets/application.sass
@import "./jquery/*"
@import "./sass/mixins"
@import "./sass/tags"
@import "./sass/box-office"

.left
  float: left
  
.clear
  clear: both

ul
  list-style: none
  margin-left: 0px
  
h1
  font-size: 2.5em
h2
  margin-bottom: 10px
  font-size: 2.0em
  
h3
  margin-bottom: 10px
  font-size: 1.6em
  
a
  font-weight: bold
  
#organization-details
  margin-top: 50px
  
#kit-table
  td.status
    width: 60px
    text-align: center
    padding-bottom: 1.4em
    p
      line-height: 4em
  td.type
    vertical-align: top
  .kit-type
    font-weight: bold
  
ul#memberships 
  li
    margin: 0 10px 10px 0px
  .email
    font-weight: bold

.bordered
  border: 3px solid #ccc
  text-align: center
  border-radius: 5px
  moz-border-radius: 5px
  
.nav-grav
  padding-top: 3px
  border-radius: 5px
  moz-border-radius: 5px
  height: 32px

.user-grav
  height: 48px
  width: 48px
  padding: 2px

.large-grav
  height: 130px
  width: 130px
  padding: 2px
  
.no-image
  border-radius: 10px
  moz-border-radius: 10px
  border: 2px dashed #999
  background-color: #ddd
  height: 75px
  width: 75px
  text-align: center
  a, #text
    padding-top: 27px
    font-weight: bold
    color: #666
  a
    cursor: pointer
  p
    color: #999
    
.full
  width: 100%
    
#add-a-description
  width: 100%
  height: 150px
  margin-bottom: 9px
  #text
    padding-top: 50px
    
#add-a-venue
  width: 100%
  height: 150px
  #text
    padding-top: 50px
    
#day-date
  width: 95%
  height: 120px
  border: 2px solid #999
  background-color: #eee
  #month
    border-bottom: 2px solid #999
    text-align: center
    color: #eee
    font-weight: bold
    border-radius: 0px
    moz-border-radius: 0px
    font-size: 18px
    padding: 5px 0px
  #day
    text-align: center
    font-size: 84px
    padding: 14px 0px
    color: #175C71

ul#event-list
  li.event-list-item
    margin-bottom: 20px
    
ul.mini-stats
  li
    line-height: 20px
    
ul.kv
  li
    margin-bottom: 10px
      
ul#recent-list
  li
    margin-bottom: 10px
    
.quiz-form
  label.control-label
    font-size: 1.8em
    width: 240px
  .controls
    margin-left: 250px
  .form-actions
    padding-left: 250px
    
.modal
  display: none
  
#event-header-logo-container
  text-align: right
  
#event-header-logo
  border-radius: 5px
  moz-border-radius: 5px
  
#storefront-link
  font-size: 1.5em
  
#storefront-text
  margin-top: 40px
  font-size: 1.3em
  
.section-fields
  margin-bottom: 40px
  
#show-headline
  background-color: #eee
  padding: 15px
  margin-bottom: 15px
  
.merge-confirm-block
  background-color: #eee
  padding: 15px
  margin-bottom: 15px
  
#merge-arrow
  text-align: center
  margin-bottom: 15px

#admin #heading
  h1
    margin-bottom: 25px
  
form.sprited
  display: none

tr.published form.published, tr.unpublished form.unpublished, tr.built form.built, tr.pending form.pending, tr.destroyable form.destroyable
  display: inline
  
.dialog
  display: none
  
.hidden
  display: none !important
  
#contact-information
  #image
    margin-right: 10px

ul.report
  li
    clear: both
  span.stat
    display: inline-block
    font-weight: bold
    width: 100px
    text-align: left
    margin: 0px
  span.current
    display: inline-block
    width: 75px
    text-align: right
    margin: 0px

tr.returned, tr.refunded
  td.item-description, td.price
    text-decoration: line-through
    
.in-table
  margin-bottom: 0px

table.example-contact
  .field
    font-weight: bold
    
tr.no-border
  td
    border-top: 0px

.label.hidden
  display: none
  
.invisible
  visibility: hidden

#offers-by-me
  padding-top: 25px

.admin-message
  font-weight: bold
  font-size: 1.5em

#reseller-profile-datatable
  margin-top: 25px

.with-gap-above
  margin-top: 50px

span.help
  background-color: #666
  color: white
  font-weight: bold
  margin-left: 20px
  font-size: 14px
  padding: 4px
  @include rounded-corners(6px, 6px, 6px, 6px)

.tight
  margin-left: 0px !important
  
input.datepicker, input.datetimepicker
  cursor: pointer

.form-vertical > input,
.form-vertical > select,
.form-vertical > .control,
.form-vertical > .input-prepend
  margin-bottom: 1.5em

.form-vertical > .control > input
  margin-bottom: 0

.advanced-search input[type="date"]
  width: 125px

.advanced-search .range-separator
  width: 20px
  display: inline-block
  text-align: center

input[type=number]::-webkit-inner-spin-button,
input[type=number]::-webkit-outer-spin-button
  -webkit-appearance: none
  margin: 0

.details-long
  margin-bottom: 1em

.details-long ul
  list-style: disc
  margin-left: 17px
  margin-bottom: 1em

a.red
  color: red

a.red:hover
  color: red
  text-decoration: underline

